Added locators method and others GenericKey method also removed catch for properties and changed the Exception parent in ApplicationKey

--- a/seleniumDataDrivenV1/src/main/resources/properties/ProjectKeys.properties
+++ b/seleniumDataDrivenV1/src/main/resources/properties/ProjectKeys.properties
@@ -4,4 +4,12 @@
 browser_name=chrome
 url = https://www.rediff.com/
 
-#
+#locators
+
+singnIn_xpath=//*[@class='signin']
+money_menu_xpath=//div[@class='toplinks']/a[contains(text(),'Money')]
+my_portfolio_xpath=//li/a[contains(text(),'My Portfolio')]
+user_email_id=useremail
+user_pass_name=passwd
+captcha_className=captchatext
+submit_id=loginsubmit
