--- a/seleniumDataDrivenV1/pom.xml
+++ b/seleniumDataDrivenV1/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.23.1</version>
 		</dependency>
+		<dependency>
+			<groupId>Amazon</groupId>
+			<artifactId>Amazon</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
