--- a/seleniumDataDrivenV1/src/main/resources/properties/ProjectKeys.properties
+++ b/seleniumDataDrivenV1/src/main/resources/properties/ProjectKeys.properties
@@ -13,3 +13,11 @@ user_email_id=useremail
 user_pass_name=passwd
 captcha_className=captchatext
 submit_id=loginsubmit
+
+
+# Screenshot Flags
+screenshot.onEveryStep=true
+screenshot.onFailure=true
+
+# Report Folder
+report.outputFolder=reportss
