--- a/seleniumDataDrivenV1/pom.xml
+++ b/seleniumDataDrivenV1/pom.xml
@@ -79,7 +79,7 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.23.1</version>
 		</dependency>
-		<dependency>
+	<!--	<dependency>
 			<groupId>Amazon</groupId>
 			<artifactId>Amazon</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
@@ -88,7 +88,7 @@
 			<groupId>seleniumPractice</groupId>
 			<artifactId>seleniumPractice</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		<!-- SLF4J API -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
